gap issue fixed

--- a/index.css
+++ b/index.css
@@ -4,6 +4,9 @@
     font-family: Assistant, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
     box-sizing: border-box;
 }
+main{
+    padding-top: 80px;
+}
 header{
     display: flex;
     position: fixed;
@@ -81,10 +84,6 @@ header{
 }
 .action_text{
      font-size: 12px;
-}
-
-.banner_container{
-    margin: 40px 0;
 }
 .banner_image{
     height: 750px;
